--- a/PokemonDatabase.csproj
+++ b/PokemonDatabase.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CardName.cs" />
     <Compile Include="CardSet.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="Form1.cs">
@@ -62,6 +63,8 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GenerateCardNames.cs" />
+    <Compile Include="GenerateCardSets.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
